syntax = "proto3";

package simple_demo_chain_version;

message InputData {
    double value = 1;
}